2002-03-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Drawable.cpp (DrawableViewbox): New class to allow setting
 	the MVG output size.  Still needs documentation.

2002-03-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Drawable.cpp (print): Changed "mpr:" to "mpri:" in order to
 	*finally* get DrawableCompositeImage to work as intended.

	* lib/Image.cpp (registerId): Bugfix. Register using
 	sizeof(MagickLib::Image) rather than sizeof(Image).

2002-03-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Drawable.cpp (DrawableCompositeImage): Had failed to
 	initialize width and height in object to image width and height.

2002-02-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/STL.h (endianImage): New class to specify the
 	endian option for formats which support this notion (e.g. TIFF).

	* lib/Image.cpp (endian): New method to specify the endian option
 	for formats which support this notion (e.g. TIFF).

2002-02-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Drawable.cpp (DrawableFont): Support specifying a font via
 	font-family, font-style, font-weight, and font-stretch. Wildcard
 	matches are supported.

2002-02-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (charcoal): Replace Magick++'s charcoal effect
 	with the output of ImageMagick's CharcoalImage function in order
 	to ensure consistency.

	* lib/Magick++/CoderInfo.h (MatchType): Scope the MatchType
 	enumeration to the CoderInfo class so these enumeration names can
 	be re-used elsewhere without conflict.  This results in a minor
 	API change to the coderInfoList() templated function since
 	enumerations must be specified like "CoderInfo::TrueMatch" rather
 	than just "TrueMatch".  Hopefully not a problem since this
 	function and class were not documented outside of the headers
 	until this release.

2002-02-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
