@@ -4,6 +4,17 @@
 </HEAD>
 <BODY TEXT="#000000" BGCOLOR="#FFFFFF" LINK="#0000EE" VLINK="#551A8B" ALINK="#FF0000">
 <p>
+2002-03-30  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> lib/Drawable.cpp (DrawableViewbox): MVG syntax wasn't correct.
+
+  <LI> lib/Image.cpp (draw): Fix algorithm used to append newlines to
+        MVG commands so that draw() may be invoked multiple times while
+        still producing valid MVG.
+
+</UL>
+<p>
 2002-03-29  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
